--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,9 @@ __marimo__/
 .streamlit/secrets.toml
 .streamlit/secrets.toml.txt
 
+# --- secrets and local stuff ---
+.streamlit/secrets.toml
+.streamlit/secrets.toml.txt
+venv/
+__pycache__/
+*.lnk
