--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas>=2.2
-openai>=1.37
-streamlit==1.37.0
-requests>=2.31
-numpy
+streamlit>=1.37
+pandas>=2.1
+numpy>=1.26
+tabulate>=0.9
+openai>=1.40
