--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.37
-pandas>=2.1
-numpy>=1.26
-tabulate>=0.9
-openai>=1.40
+﻿streamlit>=1.29
+pandas>=1.5
+numpy>=1.24
+openai>=1.30
+tabulate>=0.9.0
