--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-﻿streamlit>=1.29
-pandas>=1.5
-numpy>=1.24
-openai>=1.30
+streamlit>=1.29.0
+pandas>=2.0.0
+numpy>=1.24.0
+openai>=1.30.0
 tabulate>=0.9.0
+python-dateutil>=2.8.0
