Add persistent database layer for Render deployments
- New db_persistence.py: Layered persistence (Render disk > GitHub backup > local)
  - Auto-detects /data mount on Render persistent disk
  - GitHub API backup/restore (exports 11 tables as JSON to db-backup branch)
  - Async background backups triggered after every result save
  - Zero external dependencies (uses urllib.request)

- Updated render.yaml: Added persistent disk config (1GB) + env vars
  - GITHUB_TOKEN for backup authentication
  - GITHUB_REPO for backup target

- Updated app.py: All DB paths use PERSISTENT_DB_PATH
  - Persistence init at startup with auto-restore from GitHub
  - GitHub backup triggers after result save + calibration + learning
  - Section E shows persistence status (disk/GitHub/ephemeral level)
  - Fixed all 5 hardcoded gold_high_iq.db references

Ensures race data, learned weights, and calibration history survive
Render redeployments so the model keeps learning across every race.

--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,19 @@ services:
     runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: streamlit run app.py --server.port=$PORT --server.address=0.0.0.0
+    # Persistent disk — keeps database across redeploys ($0.25/GB/month)
+    # Remove this block if on free tier and using GitHub backup instead
+    disk:
+      name: race-data
+      mountPath: /data
+      sizeGB: 1
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
+      # GitHub backup (FREE safety net — set in Render Dashboard → Environment)
+      # Create token: GitHub → Settings → Developer Settings → Personal Access Tokens
+      # Needs 'repo' scope. Set value in Render Dashboard, NOT here.
+      - key: GITHUB_TOKEN
+        sync: false  # Must be set manually in Render Dashboard
+      - key: GITHUB_REPO
+        value: craigstephens859-prog/Horse-Race-Ready
