FIX: Seed Render DB + double-save fix + Phase3 styling
- Un-gitignore gold_high_iq.db so Render persistent disk can seed from repo
- Issue A: Fix double-save (filter completed races, persist success state)
- Issue B: Phase 3 report now renders as styled HTML matching Classic Report

--- a/.gitignore
+++ b/.gitignore
@@ -269,7 +269,8 @@ secrets.toml
 *.db
 *.sqlite
 *.sqlite3
-gold_high_iq.db
+# EXCEPTION: gold_high_iq.db is needed for Render persistent disk seeding
+!gold_high_iq.db
 historical_racing_gold.db
 race_database.db
 
