--- a/.gitignore
+++ b/.gitignore
@@ -187,6 +187,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file. However, if you prefer, 
 #  you could uncomment the following to ignore the entire vscode folder
 # .vscode/
+.vscode/extensions.json
 
 # Ruff stuff:
 .ruff_cache/
@@ -308,3 +309,14 @@ service_account.json
 analysis_*.txt
 race_report_*.txt
 betting_strategy_*.txt
+
+# Temporary working directories/files (Claude/AI agent artifacts)
+tmpclaude-*
+tmp*
+
+# Sample/test race files
+SAMPLE_TEST_RACE.txt
+SAMPLE_*.txt
+
+# Windows artifacts
+NUL
