Defensive coding: debug traces on 15 parsers, None defaults for critical params, ruff ARG rules
- 15 parser functions now log debug traces when returning empty/zero results
- analyze_pace_figures: e1_par/e2_par/lp_par changed from default=0 to None
- calculate_layoff_factor: num_workouts changed from default=0 to None
- calculate_hot_trainer_bonus: trainer_starts changed from default=0 to None
- Callers pass None explicitly so silent failures produce visible log traces
- ruff.toml: added ARG (unused argument detection) and RUF rule sets
- VS Code settings: enabled Pylance basic type checking mode
- engine_contracts.py: data flow reference for session_state keys and parsers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,5 +42,11 @@
     "chat.customAgentInSubagent.enabled": true,
     "chat.editor.wordWrap": "on",
     "chat.edits2.enabled": true,
-    "editor.allowVariableFontsInAccessibilityMode": true
+    "editor.allowVariableFontsInAccessibilityMode": true,
+    "python.analysis.typeCheckingMode": "basic",
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportUnusedVariable": "warning",
+        "reportUnusedImport": "warning",
+        "reportUnnecessaryComparison": "warning"
+    }
 }
