Fix 5 unsafe zip() (B905), 4 unused vars (F841), add runtime contracts to compute_bias_ratings
- zip() calls in analyze_pace_figures, pace loop, calculate_form_trend: add strict=False (intentional truncation)
- Unused vars: claim_wins, t_wins -> _prefixed; track_pattern_detail init removed; pace_cap_applied removed
- compute_bias_ratings: validate df_styles non-empty, required columns present, surface/distance defaults
- All 35 smoke tests pass, py_compile clean, ruff B905/F841 clear

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,6 @@
         "reportUnusedVariable": "warning",
         "reportUnusedImport": "warning",
         "reportUnnecessaryComparison": "warning"
-    }
+    },
+    "git.ignoreLimitWarning": true
 }
